# cobo-mpc-callback-server

./: .gitignore  README-zh.md  README.md  go.mod
example/callback-server-go/: README-zh.md  README.md  main.go
example/callback-server-go/service/: callbackService.go  types.go  whiteListRule.go
example/callback-server-java/: README-zh.md  README.md  pom.xml
example/callback-server-java/src/main/java/com/cobo/tss/example/: CallbackServer.java  Types.java  WhiteListRule.java
example/callback-server-nodejs/: README-zh.md  README.md  package-lock.json  package.json  server.js
example/callback-server-py/: README-zh.md  README.md  main.py  requirements.txt
example/callback-server-rust/: Cargo.toml  README-zh.md  README.md
example/callback-server-rust/src/: main.rs
example/callback-service-go/: README.md  main.go
example/callback-service-go/service/: callbackService.go  types.go
example/callback-service-java/: README.md  pom.xml
example/callback-service-java/src/main/java/com/cobo/tss/example/: CallbackServer.java
example/callback-service-nodejs/: README.md  package-lock.json  server.js
example/callback-service-py/: README.md  main.py  requirements.txt
example/callback-service-rust/: Cargo.toml  README.md
example/callback-service-rust/src/: main.rs
