[package]
name = "callback-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.1"
